regression/fail/modules.9.sml
signature S =
   sig
      type t = int
      type u = int
      sharing type t = u
   end
